feat(post): moved first post to correct location

--- a/content/blogs/effeciency.org
+++ b/content/blogs/effeciency.org
@@ -1,4 +1,5 @@
 #+TITLE: How to save your time as a developer
+#+DATE: 2025-04-20
 
 * Who is this for?
 - If you spend multiple hours per day programming
